2004-05-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Fix off-by-one error in indexing
	color ramp of gray values.

2004-05-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/getcolor.h src/getcolor.c: New routines rgb1maxcolors_from_gray()
	and rgb255maxcolors_from_gray().

	* term/aquaterm.trm (AQUA_set_color) term/pdf.trm (PDF_set_color):
	Change call from rgb1_from_gray() to rgb1maxcolors_from_gray(). Fixes
	color mapping with 'set palette maxcolors'.

	* svg.trm (SVG_set_color): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

2004-05-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (event_buttonpress): Don't start zooming box if replot is
	disabled.

2004-05-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (exec_cmd): Flush polyline to X-server when it reaches
	half the maximum single request size supported on the current display.

	* term/dumb.trm term/gd.trm term/pfg.trm term/x11.trm: The enhanced text
	overprint parameter was used as an (int) in some drivers, even though it
	is declared as a TBOOLEAN.  Change it to (int) everywhere.

2004-05-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c src/term.c term/hpljii.trm: SF bug #953887 non-portable C
	code (prototypes & TBOOLEAN): input parameter for routines cannot be
	char, they must be int.

2004-05-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (mainloop): Add a 100 usec delay to the event flush 
	loop, so that if the other end of the pipe is jammed (gnuplot STOPPED)
	it doesn't monopolize CPU cycles. Fixes user-triggered error condition 
	reported in bug #930426.

2004-05-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (plot_boxes): Clip lower border of
	boxxyerrorbars, too.
	(do_plot): Regrouped master switch over plot types.  Draw box
	first in BOXERROR mode, to keep the lower part of the errorbar
	visible.
